Fix width on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ input:focus {
   background-color: rgb(3, 65, 3);
 }
 .card {
-  border: 1px black solid;
+  border: 2px black solid;
   padding: 2rem;
   font-size: 2.2rem;
   line-height: 2.4rem;
@@ -89,6 +89,11 @@ input:focus {
 }
 #profilecard {
   display: none;
+}
+@media (min-width: 320px) and (max-width: 450px) {
+    .card {
+        width: 22rem;
+    } 
 }
 #imagecontainer {
   max-width: 7rem;
